--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,6 +17,8 @@ fxLayoutGap="10px"
 
      </div>
      <div fxFlex>
+
+
       <mat-grid-list cols="2" rowHeight="200px">
         <mat-grid-tile *ngFor="let dish of dishes">
           <img height="200px" src={{dish.image}} alt={{dish.name}}>
@@ -27,27 +29,9 @@ fxLayoutGap="10px"
       </mat-grid-list>
     </div>
 
-    <div fxFlex *ngIf="selectedDish">
+  <div fxFlex>      <app-dishdetail></app-dishdetail></div>
 
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            <h3>{{ selectedDish.name | uppercase }}</h3>
-          </mat-card-title>
 
-        </mat-card-header>
-        <img mat-card-image src="{{ selectedDish.image}}"  alt="{{selectedDish.name}}">
-        <mat-card-content>
-            <p>{{selectedDish.description}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-
-      </mat-card>
-
-    </div>
 
 
 </div>
